Bug fixed: reduce font size of Font in about us and fixed overflow of the contnent in the why choose us

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -980,7 +980,7 @@ box-shadow: 0 0 0 0;
         margin-bottom: 30px;
     }
     .s-about-text h2 {
-    font-size: 193px;
+    font-size: 97px;
     margin-top: 0px;
     margin-bottom: 0;
     width: 100%;
